Try to fix issues with form on Safari v3

--- a/static/style/kontakt.css
+++ b/static/style/kontakt.css
@@ -382,12 +382,18 @@
 
     .usluga label {
         font-size: 12px !important;
+        cursor: pointer;
     }
 
     .usluga label button {
         width: 15px !important;
         height: 15px !important;
         border-width: 1px !important;
+        cursor: pointer;
+    }
+
+    .usluga label button div {
+        cursor: pointer;
     }
 
     .kontakt button[type="submit"] {
